chore: overflow fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -131,7 +131,7 @@ mat-option:hover {
   text-align: center;
   padding: 0;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .shortCutList {
